# react-native-rssdk

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-rssdk.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/libs/: Network-release.aar  bccrypto-release.aar  security-algorithm-1.0.0-beta.aar
android/src/main/: AndroidManifest.xml
android/src/main/cpp/Android/: CMakeLists.txt  SDKWrapper.cpp  SDKWrapper.h
android/src/main/cpp/Include/: RSMedia.h  RSParameter.h  RSSDKWrapper.h  common_type.h  correction_type.h
android/src/main/cpp/JsonCpp/: json.h  jsoncpp_ex.h
android/src/main/java/com/rssdk/: RsSdkPackage.java  RsSdkReactJavaModule.java  RsSdkReactOpenGLSurfaceViewManager.java  RssdkModule.kt  RssdkPackage.kt
android/src/main/java/com/rssdk/baseutils/: DebugUtil.java
android/src/main/java/com/rssdk/common/log/: RSLog.java
android/src/main/java/com/rssdk/glsurface/: FirstPasswordSetting.java  OpenGLRender.java  OpenGLSurfaceView.java  PasswordSetting.java
android/src/main/java/com/rssdk/glsurface/encrypt/: AesBase64Cipher.java  Base64.java  PKCS7Encoder.java  PasswordEncrypt.java  PasswordEncryption.java
android/src/main/java/com/rssdk/glsurface/encrypt/exception/: AesException.java  BaseException.java
android/src/main/java/com/rssdk/jni/: JniAudioEffect.java  JniAudioRecord.java  JniAudioTrack.java  JniRsSdkCallback.java  JniRsSdkWrapper.java
android/src/main/java/com/rssdk/rs/: RsSdkPackage.java  RsSdkReactJavaModule.java  RsSdkReactOpenGLSurfaceViewManager.java
android/src/main/java/com/rssdk/rs/baseutils/: DebugUtil.java
android/src/main/java/com/rssdk/rs/common/log/: RSLog.java
android/src/main/java/com/rssdk/rs/glsurface/: FirstPasswordSetting.java  OpenGLRender.java  OpenGLSurfaceView.java  PasswordSetting.java
android/src/main/java/com/rssdk/rs/glsurface/encrypt/: AesBase64Cipher.java  Base64.java  PKCS7Encoder.java  PasswordEncrypt.java  PasswordEncryption.java
android/src/main/java/com/rssdk/rs/glsurface/encrypt/exception/: AesException.java  BaseException.java
android/src/main/java/com/rssdk/rs/jni/: JniAudioEffect.java  JniAudioRecord.java  JniAudioTrack.java  JniRsSdkCallback.java  JniRsSdkWrapper.java
android/src/main/java/com/rssdk/xlog/: Log.java  Xlog.java
cpp/: react-native-rssdk.cpp  react-native-rssdk.h
example/: Gemfile  app.json  babel.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/FunsdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FunsdkExample.xcodeproj/: project.pbxproj
example/ios/FunsdkExample.xcworkspace/: contents.xcworkspacedata
example/ios/FunsdkExampleTests/: FunsdkExampleTests.m
example/ios/RssdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RssdkExample.xcodeproj/: project.pbxproj
example/ios/RssdkExampleTests/: RssdkExampleTests.m
example/src/: App android.tsx  App.tsx
example/src/alarms/: index.tsx
example/src/init/: index.tsx
example/src/list/: index.tsx  utils.ts
example/src/live/: index.tsx
example/src/push/: buttons.tsx  index.tsx
example/src/qrcode/: buttons.tsx  index.tsx
example/src/record/: buttons.tsx  index.tsx  list.tsx
example/src/share/: index.tsx
example/src/styles/: index.tsx
example/src/utils/: folder.ts  permisiion.ts
example/src/wifi/: buttons.tsx  index.tsx
ios/: Rssdk.h  Rssdk.mm
src/: index.tsx
src/core/: index.ts
src/device/: index.tsx
src/device/add/: index.ts  list.ts  sn.ts
src/device/manager/: index.ts  info.ts  manager.ts  types.ts
src/enums/: index.ts
src/info/: index.ts
src/login/: index.tsx
src/module/: RsSdkEnums.ts  RsSdkTypes.ts  RsSdkUtils.ts  RsSdkWrapperModule.ts
src/module/deviceSingleton/: index.ts
src/module/flowSubModules/: rsSdkExecuteLoginSubModuleFlow.ts  (+4 more)
src/monitor/: index.tsx
src/register/: index.ts
src/types/: index.ts
src/utils/: index.ts
(+12 files in other folders)
